Multi-LCC Fix for some PA descriptions going off screen

--- a/static/css/dashboard.css
+++ b/static/css/dashboard.css
@@ -177,7 +177,8 @@
 	color: #595959;
 	font-size: .8em;
 	vertical-align: top;
-	cursor:default;
+	cursor: default;
+	max-width: 150px;
 }
 
 .descriptionTable td:first-child {
